# projector_tracker

./: .gitignore  1  CMakeLists.txt  LICENSE.txt  License.txt  graycode.cpp  graycode.h  main.cpp
data/: calibrationCamera.yml  calibrationProjector.yml  calibrationProjector_bkup.yml  cam-pro-bkup  cam_calib_setting.yml  cam_proj_trans.yaml  cam_proj_trans.yml  cam_proj_trans_nochecker.yml  cam_proj_trans_nochecker_1.yml  proj_calib_setting.yml  projector_in_bkup.xml  rgb_A00363813595051A.yaml  setting.yml
include/projector_tracker/: CameraCalibration.h  CameraInterface.h  CameraProjectorInterface.h  ImageLabel.hpp  ProjectorCalibration.h  ProjectorInterface.h  ProjectorTracker.h
nodes/: node.cpp
release/: CMakeCache.txt  Makefile  calib_cam  calib_proj  calibrationCamera.yml  cmake_install.cmake  exclude.gitignore  projector_tracker.cbp  test_node  video.avi
src/: .ProjectorTracker.cpp.kate-swp  CameraCalibration.cpp  CameraInterface.cpp  CameraProjectorInterface.cpp  ImageLabel.cpp  ProjectorCalibration.cpp  ProjectorInterface.cpp  ProjectorTracker.cpp
test/: calib_cam.cpp  calib_proj.cpp  capture.cpp  test.cpp
